Chapter 1/Exercise 1.7/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rand-string-svc
spec:
  type: ClusterIP
  selector:
    app: rand-string
  ports:
    - port: 2500
      protocol: TCP
      targetPort: 3000
