Chapter 1/Exercise 1.7/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rand-string-ing
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rand-string-svc
                port:
                  number: 2500
          - path: /pingpong
            pathType: Prefix
            backend:
              service:
                name: pong-svc
                port:
                  number: 2501
